--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -8,8 +8,8 @@ UIC=@UIC@
 CC=@CC@
 CXX=@CXX@
 
-CFLAGS=-Wall -W @CFLAGS@ -I@KINC@ -DOP_EVENTS_DESC @QT2_INCLUDES@
-CXXFLAGS=-Wall -W @CXXFLAGS@ -I@KINC@ -DOP_EVENTS_DESC @QT2_INCLUDES@
+CFLAGS=-Wall -W @CFLAGS@ -I@KINC@ @QT2_INCLUDES@
+CXXFLAGS=-Wall -W @CXXFLAGS@ -I@KINC@ @QT2_INCLUDES@
 
 # FIXME: dependencies are fucked ... my fault (john)
 
@@ -34,20 +34,17 @@ uninstall:
 	@echo "---------------------------------------------------------------"
 
 UISOURCES=ui/oprof_start.base.o ui/oprof_start.base.moc.o
-SOURCES=oprof_start.o oprof_start.moc.o op_events.o \
- oprof_start_config.o oprof_start_main.o oprof_start_util.o
+SOURCES=oprof_start.o oprof_start.moc.o ../events/op_events.o \
+ ../events/op_events_desc.o oprof_start_config.o oprof_start_main.o \
+ oprof_start_util.o
 
 oprof_start: $(SOURCES) ../util/string_manip.o
 	$(MAKE) -C ui
 	$(CXX) $(CXXFLAGS) -o $@ $^ $(UISOURCES) @QT2_LDFLAGS@ @QT2_LIBS@
 
-op_events.o: ../op_events.c
-	$(CC) -c $(CFLAGS) $< -o $@
-
 ui/oprof_start.base.h:
 	$(MAKE) -C ui
 
-op_events.o: ../op_events.c ../op_user.h ../version.h
 oprof_start.moc.o: oprof_start.moc.cpp oprof_start.h \
  ui/oprof_start.base.h oprof_start_config.h persistent_config.h \
  ../op_user.h ../version.h
