--- a/pp/Makefile.in
+++ b/pp/Makefile.in
@@ -25,27 +25,30 @@ uninstall:
 
 CC=@CC@
 CXX=@CXX@
-CFLAGS=@CFLAGS@ -Wall -W -Wstrict-prototypes -Wunused -Wshadow -Wmissing-prototypes -Winline -DOP_EVENTS_DESC
-CXXFLAGS=@CXXFLAGS@ -Wall -W -Wunused -Wmissing-prototypes -DOP_EVENTS_DESC
+CFLAGS=@CFLAGS@ -Wall -W -Wstrict-prototypes -Wunused -Wshadow -Wmissing-prototypes -Winline
+CXXFLAGS=@CXXFLAGS@ -Wall -W -Wunused -Wmissing-prototypes
 LIBS=-lpopt -lbfd -liberty -ldl
 INCLUDES=@extra_includes@
 HEADERS=oprofpp.h ../dae/opd_util.h ../op_user.h
-MY_SOURCES=oprofpp.cpp
-SOURCES=$(MY_SOURCES) ../dae/opd_util.c ../op_events.c
+MY_SOURCES=oprofpp.cpp oprofpp_util.cpp
+OBJS=../events/op_events.o ../events/op_events_desc.o ../dae/opd_util.o oprofpp_util.o
 
 srcdoc: oprofpp-src.html
 
 oprofpp-src.html: $(MY_SOURCES)
 	../scripts/dodoc -html $(MY_SOURCES) >oprofpp-src.html
 
-oprofpp: $(SOURCES) $(HEADERS)
-	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ $(SOURCES) $(LIBS)
+oprofpp: $(OBJS) oprofpp.o $(HEADERS)
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ $(OBJS) oprofpp.o $(LIBS)
 
 oprof_convert: oprof_convert.c ../dae/opd_util.c ../dae/opd_util.h
 	$(CC) $(CFLAGS) oprof_convert.c ../dae/opd_util.c -o $@ $(LIBS)
 
-oprofpp_no_main.o: oprofpp.cpp $(HEADERS)
-	$(CXX) -c -DOPROFPP_NO_MAIN $(CXXFLAGS) $(INCLUDES) -o $@ oprofpp.cpp
+oprofpp_util.o: oprofpp_util.cpp $(HEADERS)
+	$(CXX) -c $(CXXFLAGS) $(INCLUDES) -o $@ $<
+
+oprofpp.o: oprofpp.cpp $(HEADERS)
+	$(CXX) -c $(CXXFLAGS) $(INCLUDES) -o $@ $<
 
 opf_container.o: opf_container.cpp opf_filter.h ../op_user.h ../util/string_manip.h
 	$(CXX) -c $(CXXFLAGS) $< -o $@
@@ -56,6 +59,7 @@ opf_filter.o : opf_filter.cpp opf_filter.h ../op_user.h oprofpp.h child_reader.h
 child_reader.o: child_reader.cpp child_reader.h ../op_user.h
 	$(CXX) -c $(CXXFLAGS) $< -o $@
 
-op_to_source: opf_filter.o opf_container.o child_reader.o oprofpp_no_main.o ../op_events.o ../dae/opd_util.o ../util/string_manip.o $(LIBS)
-	$(CXX) $(CXXFLAGS) $^ -o op_to_source
+op_to_source: opf_filter.o opf_container.o child_reader.o $(OBJS) \
+ ../util/string_manip.o $(LIBS)
+	$(CXX) $(CXXFLAGS) $^ -o $@
 
