--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -36,9 +36,9 @@ uninstall:
 UISOURCES=ui/oprof_start.base.o ui/oprof_start.base.moc.o
 SOURCES=oprof_start.o oprof_start.moc.o ../events/op_events.o \
  ../events/op_events_desc.o oprof_start_config.o oprof_start_main.o \
- oprof_start_util.o
+ oprof_start_util.o ../util/string_manip.o ../util/child_reader.o ../util/file_manip.o
 
-oprof_start: $(SOURCES) ../util/string_manip.o
+oprof_start: $(SOURCES)
 	$(MAKE) -C ui
 	$(CXX) $(CXXFLAGS) -o $@ $^ $(UISOURCES) @QT2_LDFLAGS@ @QT2_LIBS@
 
@@ -55,7 +55,7 @@ oprof_start.o: oprof_start.cpp oprof_start.h ui/oprof_start.base.h \
 oprof_start_config.o: oprof_start_config.cpp oprof_start_config.h \
  persistent_config.h ../op_user.h ../version.h
 	$(CXX) $(CXXFLAGS) -c $< -o $@
-oprof_start_util.o: oprof_start_util.cpp oprof_start_util.h ../util/string_manip.h
+oprof_start_util.o: oprof_start_util.cpp oprof_start_util.h ../util/string_manip.h ../util/child_reader.h ../util/file_manip.h
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 oprof_start_main.o: oprof_start_main.cpp oprof_start.h \
  ui/oprof_start.base.h oprof_start_config.h persistent_config.h \
