--- a/Makefile.in
+++ b/Makefile.in
@@ -1,9 +1,4 @@
-# $Id: Makefile.in,v 1.40 2001/11/12 14:05:34 phil_e Exp $
-
-BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
-MKDIR_P=mkdir -p
-CC=@CC@
-LD=@LD@
+# $Id: Makefile.in,v 1.41 2001/11/26 21:44:34 phil_e Exp $
 
 .PHONY: all install clean distclean maintainerclean uninstall tags
 
@@ -55,7 +50,7 @@ maintainerclean: distclean
 	rm -f configure doc/Makefile aclocal.m4
 
 distclean: clean
-	rm -f Makefile module/Makefile events/Makefile util/Makefile doc/oprofile.1 dae/Makefile pp/Makefile gui/Makefile tags config.status config.log config.cache version.h
+	rm -f Makefile module/Makefile events/Makefile util/Makefile doc/oprofile.1 dae/Makefile pp/Makefile gui/Makefile gui/ui/Makefile tags config.status config.log config.cache version.h Rules.make
 
 tags:
 	ctags -R
