--- a/util/Makefile.in
+++ b/util/Makefile.in
@@ -1,20 +1,17 @@
-all: string_manip.o child_reader.o file_manip.o
-
-clean: 
-	rm -f *.o
-
-install: all
+CXXFLAGS=@CXXFLAGS@ -Wall -pedantic -W -Wunused -Wmissing-prototypes
 
 .PHONY: all clean install
 
-CXX=@CXX@
-CXXFLAGS=@CXXFLAGS@ -Wall -pedantic -W -Wunused -Wmissing-prototypes
+all: string_manip.o child_reader.o file_manip.o
 
-string_manip.o: string_manip.cpp string_manip.h
-	$(CXX) -c $(CXXFLAGS) $< -o $@
+clean: 
+	rm -f *.o *.d
 
-file_manip.o: file_manip.cpp file_manip.h
-	$(CXX) -c $(CXXFLAGS) $< -o $@
+install: all
 
-child_reader.o: child_reader.cpp child_reader.h ../op_user.h
-	$(CXX) -c $(CXXFLAGS) $< -o $@
+%.o: %cpp
+	$(CXX) -c $(CXXFLAGS) -g $< -o $@
+
+ALL_SOURCES = string_manip.cpp file_manip.cpp child_reader.cpp
+
+include ../Rules.make
