--- a/dae/Makefile.in
+++ b/dae/Makefile.in
@@ -1,9 +1,9 @@
-# $Id: Makefile.in,v 1.21 2001/12/01 21:16:48 phil_e Exp $
+# $Id: Makefile.in,v 1.22 2001/12/05 04:31:17 phil_e Exp $
 
 INSTALL_LIST=oprofiled op_start op_dump op_stop
 
 CFLAGS=-Wall -Wstrict-prototypes -O2 -pipe -Wstrict-prototypes -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
-LIBS=@extra_libraries@ -lpopt
+LIBS=@extra_libraries@ -lpopt -liberty
 
 SOURCES=oprofiled.c opd_util.c opd_proc.c
 OBJS=oprofiled.o opd_util.o opd_proc.o ../events/op_events.o ../events/op_events_desc.o ../util/op_popt.o
