--- a/events/Makefile.in
+++ b/events/Makefile.in
@@ -15,7 +15,7 @@ clean:
 	rm -f *.o *.d op_help
 
 op_help: op_events.o op_events_desc.o op_help.o ../util/op_popt.o
-	$(CC) $(CFLAGS) $(INCLUDES) -g $^ -o $@ -lpopt
+	$(CC) $(CFLAGS) $(INCLUDES) -g $^ -o $@ -lpopt -liberty
 
 %.o: %c
 	$(CC) -c $(CFLAGS) $(INCLUDE) -g $< -o $@
