finish Makefiel cleanup + minor memory leak fix

--- a/dae/Makefile.in
+++ b/dae/Makefile.in
@@ -1,8 +1,8 @@
-# $Id: Makefile.in,v 1.22 2001/12/05 04:31:17 phil_e Exp $
+# $Id: Makefile.in,v 1.23 2001/12/05 21:25:26 phil_e Exp $
 
 INSTALL_LIST=oprofiled op_start op_dump op_stop
 
-CFLAGS=-Wall -Wstrict-prototypes -O2 -pipe -Wstrict-prototypes -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
+CFLAGS=-Wall -Wstrict-prototypes -pipe -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
 LIBS=@extra_libraries@ -lpopt -liberty
 
 SOURCES=oprofiled.c opd_util.c opd_proc.c
