--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -1,10 +1,7 @@
-# $Id: Makefile.in,v 1.3 2001/11/26 21:44:35 phil_e Exp $
+# $Id: Makefile.in,v 1.4 2001/12/05 21:25:26 phil_e Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
-MKDIR_P=mkdir -p
-CC=@CC@
-LD=@LD@
 
 BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -fomit-frame-pointer -fno-strict-aliasing
 KCFLAGS := $(BKCFLAGS) -march=i686
@@ -25,33 +22,43 @@ uninstall:
 	depmod -a
 
 clean:
-	rm -f *.o
+	rm -f *.o *.d
 
 oprofile.o: op_init.o op_util.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events_module.o op_x86.o
 	$(LD) -r -o $@ $^
 
-oprofile.h: ../op_user.h ../version.h
+# we can't use implicit rules for this directory
 
-op_init.o: op_init.c oprofile.h
+op_init.o: op_init.c
 	$(CC) $(BKCFLAGS) -c -o $@ $<
 
 op_util.o: op_util.c
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
-oprofile_c.o: oprofile.c oprofile.h
+# can't use auto deps here
+oprofile_c.o: oprofile.c oprofile.h ../op_user.h
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
 op_x86.o: op_x86.c
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
-op_syscalls.o: op_syscalls.c oprofile.h
+op_syscalls.o: op_syscalls.c
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
-oprofile.s: oprofile.c oprofile.h
+oprofile.s: oprofile.c
 	$(CC) $(KCFLAGS) -S $<
 
+# can't use auto deps here
 op_events_module.o: ../events/op_events.c ../op_user.h
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
 oprofile_nmi.o: oprofile_nmi.S
 	$(CC) $(ASMFLAGS) -c -o $@ $<
+
+# not all object files can use auto deps in this directory
+ALL_SOURCES = op_init.c op_util.c op_x86.c op_syscall.c
+
+include ../Rules.make
+
+# we must overwrite dependencies make flags, the default can't work
+CPPFLAGS_DEPS += $(BKCFLAGS)
